==> kirakiseki/ECGMonitor-XiUOS/xiuos/Ubiquitous/RT-Thread_Fusion_XiUOS/aiit_board/xidatong-arm32/board/hardware/ch438/ch438.c <==
#include "ch438.h"
#include <math.h>
#define RT (0U)      // If config this macro ,we can use rt gpio for ch438 us

static void CH438SetOutput(void)
{
  gpio_pin_config_t ch438_d0_config ={kGPIO_DigitalOutput, 0, kGPIO_NoIntmode};
  GPIO_PinInit(CH438_D_GPIO,CH438_D0_PIN,&ch438_d0_config);
  GPIO_PinInit(CH438_D_GPIO,CH438_D1_PIN,&ch438_d0_config);
	GPIO_PinInit(CH438_D_GPIO,CH438_D2_PIN,&ch438_d0_config);
  GPIO_PinInit(CH438_D_GPIO,CH438_D3_PIN,&ch438_d0_config);
	GPIO_PinInit(CH438_D_GPIO,CH438_D4_PIN,&ch438_d0_config);
  GPIO_PinInit(CH438_D_GPIO,CH438_D5_PIN,&ch438_d0_config);
	GPIO_PinInit(CH438_D_GPIO,CH438_D6_PIN,&ch438_d0_config);
  GPIO_PinInit(CH438_D_GPIO,CH438_D7_PIN,&ch438_d0_config);

}

static void CH438SetInput(void)
{
	gpio_pin_config_t ch438_d0_config ={kGPIO_DigitalInput, 0, kGPIO_NoIntmode};
	GPIO_PinInit(CH438_D_GPIO,CH438_D0_PIN,&ch438_d0_config);
  GPIO_PinInit(CH438_D_GPIO,CH438_D1_PIN,&ch438_d0_config);
	GPIO_PinInit(CH438_D_GPIO,CH438_D2_PIN,&ch438_d0_config);
  GPIO_PinInit(CH438_D_GPIO,CH438_D3_PIN,&ch438_d0_config);
	GPIO_PinInit(CH438_D_GPIO,CH438_D4_PIN,&ch438_d0_config);
  GPIO_PinInit(CH438_D_GPIO,CH438_D5_PIN,&ch438_d0_config);
	GPIO_PinInit(CH438_D_GPIO,CH438_D6_PIN,&ch438_d0_config);
  GPIO_PinInit(CH438_D_GPIO,CH438_D7_PIN,&ch438_d0_config);

}

static uint8_t ReadCH438Data(uint8_t addr)
{
    uint8_t dat = 0;
	  GPIO_PinWrite(CH438_CTL_GPIO,CH438_NWR_PIN,PIN_HIGH);
		GPIO_PinWrite(CH438_CTL_GPIO,CH438_NRD_PIN,PIN_HIGH);
		GPIO_PinWrite(CH438_CTL_GPIO,CH438_ALE_PIN,PIN_HIGH);
 
	  
	  CH438SetOutput();
   
	  #ifdef ADAPTER_ZIGBEE_E18
    udelay(10);
    #else
    udelay(1);   
	  #endif	    
	  if(addr &0x80)    GPIO_PinWrite(CH438_D_GPIO,CH438_D7_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D7_PIN,PIN_LOW);
    if(addr &0x40)    GPIO_PinWrite(CH438_D_GPIO,CH438_D6_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D6_PIN,PIN_LOW);
    if(addr &0x20)    GPIO_PinWrite(CH438_D_GPIO,CH438_D5_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D5_PIN,PIN_LOW);
    if(addr &0x10)    GPIO_PinWrite(CH438_D_GPIO,CH438_D4_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D4_PIN,PIN_LOW);
    if(addr &0x08)    GPIO_PinWrite(CH438_D_GPIO,CH438_D3_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D3_PIN,PIN_LOW);
    if(addr &0x04)    GPIO_PinWrite(CH438_D_GPIO,CH438_D2_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D2_PIN,PIN_LOW);
    if(addr &0x02)    GPIO_PinWrite(CH438_D_GPIO,CH438_D1_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D1_PIN,PIN_LOW);
    if(addr &0x01)    GPIO_PinWrite(CH438_D_GPIO,CH438_D0_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D0_PIN,PIN_LOW);

		#ifdef ADAPTER_ZIGBEE_E18
    udelay(10);
    #else
    udelay(1);   
	  #endif	    
	
    GPIO_PinWrite(CH438_CTL_GPIO,CH438_ALE_PIN,PIN_LOW);
   
		
		#ifdef ADAPTER_ZIGBEE_E18
    udelay(10);
    #else
    udelay(1);   
	  #endif	    
	
    CH438SetInput();
		
    #ifdef ADAPTER_ZIGBEE_E18
    udelay(10);
    #else
    udelay(1);   
	  #endif	    
	
    GPIO_PinWrite(CH438_CTL_GPIO,CH438_NRD_PIN,PIN_LOW);
    
		#ifdef ADAPTER_ZIGBEE_E18
    udelay(10);
    #else
    udelay(1);   
	  #endif	    
	  
   
    if (GPIO_PinRead(CH438_D_GPIO,CH438_D7_PIN))    dat |= 0x80;
    if (GPIO_PinRead(CH438_D_GPIO,CH438_D6_PIN))    dat |= 0x40;
    if (GPIO_PinRead(CH438_D_GPIO,CH438_D5_PIN))    dat |= 0x20;
    if (GPIO_PinRead(CH438_D_GPIO,CH438_D4_PIN))    dat |= 0x10;
    if (GPIO_PinRead(CH438_D_GPIO,CH438_D3_PIN))    dat |= 0x08;
    if (GPIO_PinRead(CH438_D_GPIO,CH438_D2_PIN))    dat |= 0x04;
    if (GPIO_PinRead(CH438_D_GPIO,CH438_D1_PIN))    dat |= 0x02;
    if (GPIO_PinRead(CH438_D_GPIO,CH438_D0_PIN))    dat |= 0x01;
  
		
		
		GPIO_PinWrite(CH438_CTL_GPIO,CH438_NRD_PIN,PIN_HIGH);
		GPIO_PinWrite(CH438_CTL_GPIO,CH438_ALE_PIN,PIN_HIGH);

		
    #ifdef ADAPTER_ZIGBEE_E18
    udelay(10);
    #else
    udelay(1);   
	  #endif	    
	

    return dat;
}

static void WriteCH438Data(uint8_t addr, const uint8_t dat)
{   
	  
    GPIO_PinWrite(CH438_CTL_GPIO,CH438_ALE_PIN,PIN_HIGH);
		GPIO_PinWrite(CH438_CTL_GPIO,CH438_NRD_PIN,PIN_HIGH);
	  GPIO_PinWrite(CH438_CTL_GPIO,CH438_NWR_PIN,PIN_HIGH);	
 
	
	  CH438SetOutput();
    
    
	  #ifdef ADAPTER_ZIGBEE_E18
    udelay(100);
    #else
    udelay(1);   
	  #endif
    
    
		if(addr &0x80)    GPIO_PinWrite(CH438_D_GPIO,CH438_D7_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D7_PIN,PIN_LOW);
    if(addr &0x40)    GPIO_PinWrite(CH438_D_GPIO,CH438_D6_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D6_PIN,PIN_LOW);
    if(addr &0x20)    GPIO_PinWrite(CH438_D_GPIO,CH438_D5_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D5_PIN,PIN_LOW);
    if(addr &0x10)    GPIO_PinWrite(CH438_D_GPIO,CH438_D4_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D4_PIN,PIN_LOW);
    if(addr &0x08)    GPIO_PinWrite(CH438_D_GPIO,CH438_D3_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D3_PIN,PIN_LOW);
    if(addr &0x04)    GPIO_PinWrite(CH438_D_GPIO,CH438_D2_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D2_PIN,PIN_LOW);
    if(addr &0x02)    GPIO_PinWrite(CH438_D_GPIO,CH438_D1_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D1_PIN,PIN_LOW);
    if(addr &0x01)    GPIO_PinWrite(CH438_D_GPIO,CH438_D0_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D0_PIN,PIN_LOW);

		
	  #ifdef ADAPTER_ZIGBEE_E18
    udelay(100);
    #else
    udelay(1);   
	  #endif	 
    
		
    GPIO_PinWrite(CH438_CTL_GPIO,CH438_ALE_PIN,PIN_LOW);
   
		
		
		#ifdef ADAPTER_ZIGBEE_E18
    udelay(100);
    #else
    udelay(1);   
	  #endif	
    
		
    if(dat &0x80)    GPIO_PinWrite(CH438_D_GPIO,CH438_D7_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D7_PIN,PIN_LOW);
    if(dat &0x40)    GPIO_PinWrite(CH438_D_GPIO,CH438_D6_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D6_PIN,PIN_LOW);
    if(dat &0x20)    GPIO_PinWrite(CH438_D_GPIO,CH438_D5_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D5_PIN,PIN_LOW);
    if(dat &0x10)    GPIO_PinWrite(CH438_D_GPIO,CH438_D4_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D4_PIN,PIN_LOW);
    if(dat &0x08)    GPIO_PinWrite(CH438_D_GPIO,CH438_D3_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D3_PIN,PIN_LOW);
    if(dat &0x04)    GPIO_PinWrite(CH438_D_GPIO,CH438_D2_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D2_PIN,PIN_LOW);
    if(dat &0x02)    GPIO_PinWrite(CH438_D_GPIO,CH438_D1_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D1_PIN,PIN_LOW);
    if(dat &0x01)    GPIO_PinWrite(CH438_D_GPIO,CH438_D0_PIN,PIN_HIGH);  else    GPIO_PinWrite(CH438_D_GPIO,CH438_D0_PIN,PIN_LOW);
 
   	
		#ifdef ADAPTER_ZIGBEE_E18
    udelay(100);
    #else
    udelay(1);   
	  #endif	   
    
		
    GPIO_PinWrite(CH438_CTL_GPIO,CH438_NWR_PIN,PIN_LOW);
 
		
		#ifdef ADAPTER_ZIGBEE_E18
    udelay(100);
    #else
    udelay(1);   
	  #endif	  
    
	
		GPIO_PinWrite(CH438_CTL_GPIO,CH438_NWR_PIN,PIN_HIGH);
    GPIO_PinWrite(CH438_CTL_GPIO,CH438_ALE_PIN,PIN_HIGH);

		
		#ifdef ADAPTER_ZIGBEE_E18
    udelay(100);
    #else
    udelay(1);   
	  #endif	    

    CH438SetInput();

    return;
}

static void ImxrtCH438Init(void)
{
    CH438SetOutput();
	  gpio_pin_config_t ch438_ctl_config ={kGPIO_DigitalOutput, 0, kGPIO_NoIntmode};
    GPIO_PinInit(CH438_CTL_GPIO,CH438_NWR_PIN,&ch438_ctl_config);
		GPIO_PinInit(CH438_CTL_GPIO,CH438_NRD_PIN,&ch438_ctl_config);
		GPIO_PinInit(CH438_CTL_GPIO,CH438_ALE_PIN,&ch438_ctl_config);
		
	  GPIO_PinWrite(CH438_CTL_GPIO,CH438_NWR_PIN,PIN_HIGH);
		GPIO_PinWrite(CH438_CTL_GPIO,CH438_NRD_PIN,PIN_HIGH);
		GPIO_PinWrite(CH438_CTL_GPIO,CH438_ALE_PIN,PIN_HIGH);
}

void CH438Init(void){
	Ch438InitDefault();           //config deafult
}
