==> kirakiseki/ECGMonitor-XiUOS/xiuos/Ubiquitous/Nuttx_Fusion_XiUOS/aiit_board/xidatong-arm32/src/imxrt_ch438.c <==
#include "imxrt_ch438.h"
#define CH438PORTNUM  8
#define CH438_BUFFSIZE  256
#define CH438_INCREMENT  MSEC2TICK(33)

static void CH438SetOutput(void)
{
    imxrt_config_gpio(CH438_D0_PIN_OUT);
    imxrt_config_gpio(CH438_D1_PIN_OUT);
    imxrt_config_gpio(CH438_D2_PIN_OUT);
    imxrt_config_gpio(CH438_D3_PIN_OUT);
    imxrt_config_gpio(CH438_D4_PIN_OUT);
    imxrt_config_gpio(CH438_D5_PIN_OUT);
    imxrt_config_gpio(CH438_D6_PIN_OUT);
    imxrt_config_gpio(CH438_D7_PIN_OUT);
}

static void CH438SetInput(void)
{
    imxrt_config_gpio(CH438_D0_PIN_INPUT);
    imxrt_config_gpio(CH438_D1_PIN_INPUT);
    imxrt_config_gpio(CH438_D2_PIN_INPUT);
    imxrt_config_gpio(CH438_D3_PIN_INPUT);
    imxrt_config_gpio(CH438_D4_PIN_INPUT);
    imxrt_config_gpio(CH438_D5_PIN_INPUT);
    imxrt_config_gpio(CH438_D6_PIN_INPUT);
    imxrt_config_gpio(CH438_D7_PIN_INPUT);
}

static uint8_t ReadCH438Data(uint8_t addr)
{
    uint8_t dat = 0;
    imxrt_gpio_write(CH438_NWR_PIN, true);
    imxrt_gpio_write(CH438_NRD_PIN, true);
    imxrt_gpio_write(CH438_ALE_PIN, true);

    CH438SetOutput();
    up_udelay(1);
    
    if(addr &0x80)    imxrt_gpio_write(CH438_D7_PIN_OUT, true);   else    imxrt_gpio_write(CH438_D7_PIN_OUT, false);
    if(addr &0x40)    imxrt_gpio_write(CH438_D6_PIN_OUT, true);   else    imxrt_gpio_write(CH438_D6_PIN_OUT, false);
    if(addr &0x20)    imxrt_gpio_write(CH438_D5_PIN_OUT, true);   else    imxrt_gpio_write(CH438_D5_PIN_OUT, false);
    if(addr &0x10)    imxrt_gpio_write(CH438_D4_PIN_OUT, true);   else    imxrt_gpio_write(CH438_D4_PIN_OUT, false);
    if(addr &0x08)    imxrt_gpio_write(CH438_D3_PIN_OUT, true);   else    imxrt_gpio_write(CH438_D3_PIN_OUT, false);
    if(addr &0x04)    imxrt_gpio_write(CH438_D2_PIN_OUT, true);   else    imxrt_gpio_write(CH438_D2_PIN_OUT, false);
    if(addr &0x02)    imxrt_gpio_write(CH438_D1_PIN_OUT, true);   else    imxrt_gpio_write(CH438_D1_PIN_OUT, false);
    if(addr &0x01)    imxrt_gpio_write(CH438_D0_PIN_OUT, true);   else    imxrt_gpio_write(CH438_D0_PIN_OUT, false);
        
    up_udelay(1);

    imxrt_gpio_write(CH438_ALE_PIN, false);
    up_udelay(1);        

    CH438SetInput();
    up_udelay(1);
    
    imxrt_gpio_write(CH438_NRD_PIN, false);
    up_udelay(1);    
    
    if (imxrt_gpio_read(CH438_D7_PIN_INPUT))    dat |= 0x80;
    if (imxrt_gpio_read(CH438_D6_PIN_INPUT))    dat |= 0x40;
    if (imxrt_gpio_read(CH438_D5_PIN_INPUT))    dat |= 0x20;
    if (imxrt_gpio_read(CH438_D4_PIN_INPUT))    dat |= 0x10;
    if (imxrt_gpio_read(CH438_D3_PIN_INPUT))    dat |= 0x08;
    if (imxrt_gpio_read(CH438_D2_PIN_INPUT))    dat |= 0x04;
    if (imxrt_gpio_read(CH438_D1_PIN_INPUT))    dat |= 0x02;
    if (imxrt_gpio_read(CH438_D0_PIN_INPUT))    dat |= 0x01;
    
    imxrt_gpio_write(CH438_NRD_PIN, true);
    imxrt_gpio_write(CH438_ALE_PIN, true);
    up_udelay(1);

    return dat;
}

static void WriteCH438Data(uint8_t addr, const uint8_t dat)
{
    imxrt_gpio_write(CH438_ALE_PIN, true);
    imxrt_gpio_write(CH438_NRD_PIN, true);
    imxrt_gpio_write(CH438_NWR_PIN, true);

    CH438SetOutput();
    up_udelay(1);    
    
    if(addr &0x80)    imxrt_gpio_write(CH438_D7_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D7_PIN_OUT, false);
    if(addr &0x40)    imxrt_gpio_write(CH438_D6_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D6_PIN_OUT, false);
    if(addr &0x20)    imxrt_gpio_write(CH438_D5_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D5_PIN_OUT, false);
    if(addr &0x10)    imxrt_gpio_write(CH438_D4_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D4_PIN_OUT, false);
    if(addr &0x08)    imxrt_gpio_write(CH438_D3_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D3_PIN_OUT, false);
    if(addr &0x04)    imxrt_gpio_write(CH438_D2_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D2_PIN_OUT, false);
    if(addr &0x02)    imxrt_gpio_write(CH438_D1_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D1_PIN_OUT, false);
    if(addr &0x01)    imxrt_gpio_write(CH438_D0_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D0_PIN_OUT, false);

    up_udelay(1);    
    
    imxrt_gpio_write(CH438_ALE_PIN, false);
    up_udelay(1);

    if(dat &0x80)    imxrt_gpio_write(CH438_D7_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D7_PIN_OUT, false);
    if(dat &0x40)    imxrt_gpio_write(CH438_D6_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D6_PIN_OUT, false);
    if(dat &0x20)    imxrt_gpio_write(CH438_D5_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D5_PIN_OUT, false);
    if(dat &0x10)    imxrt_gpio_write(CH438_D4_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D4_PIN_OUT, false);
    if(dat &0x08)    imxrt_gpio_write(CH438_D3_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D3_PIN_OUT, false);
    if(dat &0x04)    imxrt_gpio_write(CH438_D2_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D2_PIN_OUT, false);
    if(dat &0x02)    imxrt_gpio_write(CH438_D1_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D1_PIN_OUT, false);
    if(dat &0x01)    imxrt_gpio_write(CH438_D0_PIN_OUT, true);    else    imxrt_gpio_write(CH438_D0_PIN_OUT, false);
    
    up_udelay(1);    

    imxrt_gpio_write(CH438_NWR_PIN, false);
    up_udelay(1);    
    
    imxrt_gpio_write(CH438_NWR_PIN, true);
    imxrt_gpio_write(CH438_ALE_PIN, true);
    up_udelay(1);    

    CH438SetInput();

    return;
}

static void ImxrtCH438Init(void)
{
    CH438SetOutput();
    imxrt_config_gpio(CH438_NWR_PIN);
    imxrt_config_gpio(CH438_NRD_PIN);
    imxrt_config_gpio(CH438_ALE_PIN);
    
    imxrt_gpio_write(CH438_NWR_PIN,true);
    imxrt_gpio_write(CH438_NRD_PIN,true);
    imxrt_gpio_write(CH438_ALE_PIN,true);
}
